# multicat-msa-convertor

./: .gitignore  =1.30  README.md  config.example.yaml  pyproject.toml  requirements.txt
src/msa_converter/: __init__.py  app.py  builder.py  cli.py  config.py  formatter.py  mappings.py  models.py  reader.py  validator.py  writer.py
tests/: test_builder.py  test_formatter.py  test_reader.py  test_writer.py
