[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msa-converter"
version = "0.1.0"
description = "Convert CSV/XLS tobacco sales data to MSA MultiCat fixed-width format"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "pandas>=2.0",
    "xlrd>=2.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
msa-convert = "msa_converter.cli:convert"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
